Fixes termynal spacing

--- a/leap/scss/custom/components/optional/docs.scss
+++ b/leap/scss/custom/components/optional/docs.scss
@@ -64,3 +64,8 @@ $docs-layout-height: calc(100vh - 4.5625rem);
 		}
 	}
 }
+
+.termynal{
+	margin-top: 16px;
+	margin-bottom: 16px;
+}
